--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,10 @@
 			<version>5.11.4</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
